--- a/mi-primer-website.html
+++ b/mi-primer-website.html
@@ -10,13 +10,14 @@
 </head>
 <body>
     <div class="container-nav">
-        <nav class="navbar">
+        <nav class="navbar" role="navigation"> 
+
           <a href="#" class="brand">Mi página web</a>
           <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="mi-primer-website.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="service.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
         <button class="button-menu-toggle">Menu</button>
@@ -26,29 +27,27 @@
 <body>
     <h1>Bienvenidos a la web del mago</h1> <!--comentario-->
     <h2>esta es la magia en HTML</h2>
-    <form id="myForm">
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/Cwkej79U3ek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+ <form id="myForm">
         <label for="email">Correo electrónico:</label>
         <input type="email" id="email" name="email" required>
         <button type="submit">Enviar</button>
       </form>
-    <button id="miBoton">Haz clic aquí</button> <!--boton-->
-
-</body>
-<header id="lista">
-    <nav>
-        <ul>
-            <li>picas</li>
-            <li>diamantes</li>
-            <li>corazones</li>
-            <li>trevoles</li>
-        </ul>
-    </nav>
-</header>
-<h2>donde estamos</h2>
-<p class="saludo">hola, soy el mago y les doy la bienvenida a este wev de pruebas que estoy armando</p>
-<br>
-<p class="pregunta">que es lo que estamos haciendo?</p>
-
+      <button id="miBoton" onClick="showAlert()" aria-label="Haz clic en mí">¡Haz clic en mí!</button></body>
+<div class="container">
+    <h1>Bienvenidos a mi primer Website</h1>
+    <section>
+      <h2>Presentación</h2>
+      <p>Soy MatiMAgico, ¡y esta es mi primera página web!</p>
+      <p>Estoy aprendiendo desarrollo web para crear sitios web visualmente atrapantes y funcionales.</p>
+    </section>
+    <section>
+      <h2>Lo que se viene...</h2>
+      <p>
+        A lo largo de este curso, estaré aprendiendo HTML, CSS y JavaScript. Estos lenguajes me ayudarán a crear una base sólida en el desarrollo web front-end.
+      </p>
+    </section>
+  </div>
 <footer>
     <h2>Gracias por venir...nos vemos mañana</h2>
 </footer>
