commit de actualizacion
actualizacion con nueva visual

--- a/contact.html
+++ b/contact.html
@@ -30,9 +30,10 @@
         <input type="email" id="email" name="email" required>
         <button type="submit">Enviar</button>
       </form>
-<footer>
-    <h2>Gracias por venir...nos vemos mañana</h2>
-</footer>
-<script src="main.js"></script>
+      <footer>
+        <p class="footer-text">Gracias por venir... nos vemos mañana</p>
+        <button class="saludo-button">Saludo</button>
+      </footer>
+      <script src="main.js"></script>
 
 </html>
