--- a/about.html
+++ b/about.html
@@ -30,7 +30,8 @@
 <img src="img3.jpg" alt="Descripción de la imagen 3" />
 </div>
 <footer>
-    <h2>Gracias por venir...nos vemos mañana</h2>
+  <p class="footer-text">Gracias por venir... nos vemos mañana</p>
+  <button class="saludo-button">Saludo</button>
 </footer>
 <script src="main.js"></script>
 
