--- a/mi-primer-website.html
+++ b/mi-primer-website.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenidos a la web del mago</title>
-    <link rel="stylesheet" href="estilo.css">
-</head>
+  <link rel="stylesheet" href="estilo.css"></head>
 <body>
     <div class="container-nav">
         <nav class="navbar" role="navigation"> 
@@ -22,12 +21,14 @@
         </nav>
         <button class="button-menu-toggle">Menu</button>
       </div>
-</body>
 
-<body>
+
+
     <h1>Bienvenidos a la web del mago</h1> <!--comentario-->
     <h2>esta es la magia en HTML</h2>
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/Cwkej79U3ek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <div class="video-container">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/Cwkej79U3ek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
  <form id="myForm">
         <label for="email">Correo electrónico:</label>
         <input type="email" id="email" name="email" required>
@@ -48,9 +49,10 @@
       </p>
     </section>
   </div>
-<footer>
-    <h2>Gracias por venir...nos vemos mañana</h2>
-</footer>
+  <footer>
+    <p class="footer-text">Gracias por venir... nos vemos mañana</p>
+    <button class="saludo-button">Saludo</button>
+  </footer>
 <script src="main.js"></script>
 
 </html>
