--- a/service.html
+++ b/service.html
@@ -11,29 +11,41 @@
 
 <body>
     <div class="container-nav">
-        <nav class="navbar" role="navigation">
-            <a href="#" class="brand">Mi página web</a>
-            <ul class="nav-links">
-                <li><a href="mi-primer-website.html">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="service.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+        <nav class="navbar" role="navigation"> 
+
+          <a href="#" class="brand">Mi página web</a>
+          <ul class="nav-links">
+            <li><a href="mi-primer-website.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="service.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
         </nav>
         <button class="button-menu-toggle">Menu</button>
-    </div>
+      </div>
+    <h1>Nuestros servicios</h1>
+    <p class="services-heading">Descubre aquí los servicios que ofrecemos.</p>
+    <ul class="services-list">
+        <li>
+            <img src="419.jpg" alt="Servicio 1">
+            <span>CASAMIENTOS</span>
+        </li>
+        <li>
+            <img src="1726.jpg" alt="Servicio 2">
+            <span>CUMPLEAÑOS</span>
+        </li>
+        <li>
+            <img src="20304.jpg" alt="Servicio 3">
+            <span>SHOWS</span>
+        </li>
+    </ul>
 </body>
 
-<h1>Nuestros servicios</h1>
-<p>Descubre aquí los servicios que ofrecemos.</p>
-<ul>
-    <li>CASAMIENTOS</li>
-    <li>CUMPLEAÑOS</li>
-    <li>SHOWS</li>
-</ul>
 <footer>
-    <h2>Gracias por venir...nos vemos mañana</h2>
+    <p class="footer-text">Gracias por venir... nos vemos mañana</p>
+    <button class="saludo-button" id="miBoton" onClick="showAlert()" aria-label="Haz clic en mí">¡SALUDO!</button>
 </footer>
-<script src="main.js"></script>
+  <script src="main.js"></script>
 
 </html>
+
